2010-01-29 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSThemeDrawing.m (-cellForScrollerKnobSlot:): If there are
	tiles available, set the button cell as bordered so the tiles are
	used in drawing the scroller slot.

2010-01-29 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSTheme.m:
	* Source/GSThemeDrawing.m:
	* Source/GSThemePrivate.h: Add GSStringFromBezelStyle and
	GSStringFromSegmentStyle functions which return the string name of
	the style constant for buttons and segmented controls.
	In -[GSThemeDrawing drawButton:view:style:state], use
	GSStringFromBezelStyle to try to get tiles for the specified bezel
	style, falling back to the normal NSButton tiles if the fancy tiles
	aren't present.

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/AppKit/NSPanel.h: Added panel style constants
	NSNonactivatingPanelMask and NSHUDWindowMask

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSSegmentedCell.m: NSSegmentItem should be enabled by default

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSThemeDrawing.m:
	* Source/NSSegmentedCell.m:
	* Source/NSSegmentedControl.m:
	* Headers/AppKit/NSSegmentedCell.h:
	* Headers/AppKit/NSSegmentedControl.h:
	* Headers/Additions/GNUstepGUI/GSTheme.h:
	Add GSTheme method for NSSegmentedCell drawing.
	Implemented segmentStyle and setSegmentStyle: methods.

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSButtonCell.m -isOpaque: Return NO if the button cell has a
	bezel style set. This is consistent with OS X, and fixes drawing
	glitches seen in the GSTest NSButton test.

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/AppKit/NSButtonCell.h: Correct a typo:
	NSTexturedRoundBezelStyle should be
	NSTexturedRoundedBezelStyle

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h:
	* Source/NSTableHeaderCell.m:
	* Source/GSThemeDrawing.m: Factor out table header cell drawing into
	a new GSTheme method,